GetSessionByPID DBUS call always fails on newer systemd versions

GetSessionByPID returns this error:
```
Error org.freedesktop.login1.NoSessionForPID: PID 2469 does not belong to any known session
```
So instead we will get session by calling GetSession("auto").
Tested on Fedora, should also work on openSUSE & KDE Neon.

BUG: 433408


(cherry picked from commit d7c1181a5736bc5c6b2585fb0df9065510efcd7c)